add delete /job/{id} operation

--- a/petsitter.0.0.oas.yaml
+++ b/petsitter.0.0.oas.yaml
@@ -137,6 +137,11 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Job'
+    delete:
+      summary: Delete Job
+      responses:
+        '204':
+          description: No Content
 
   /jobs/{id}/job-applications:
     parameters:
