add delete /job/{id} operation

--- a/petsitter.0.0.oas.yaml
+++ b/petsitter.0.0.oas.yaml
@@ -123,6 +123,11 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Job'
+    delete:
+      summary: Delete Job
+      responses:
+        '204':
+          description: No Content
     put:
       summary: Modify Job
       responses:
